--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body, html {
 
 .task {
     width: 300px;
-    height: 150px;
+    min-height: 150px;
     border: 1px solid silver;
     margin: 10px auto;
     padding: 10px;
